--- a/content/post/2021-07-23-introducing-the-redwall-red-flag-analyzer-with-new-constructs-data/index.Rmd
+++ b/content/post/2021-07-23-introducing-the-redwall-red-flag-analyzer-with-new-constructs-data/index.Rmd
@@ -71,19 +71,19 @@ The methodology for generating "red flags" was close to what we laid out in [A B
 
 -   We didn't fully understand the "Revelations" [cash flow]{.ul} adjustments, which primarily had to do with timing differences of expensing of employee share options. According th Mr. Gulliver's article, this became very significant during the Dot-com Bubble in many companies, but we are not sure this if it is still so, and didn't have comparable data from New Constructs to calculate it. If we were to do it again, we would have requested the data to calculate the difference between New Constructs "True Free Cash Flow" and "Traditional Free Cash Flow" as laid out in [The Most Overstated And Understated FCF In The S&P 500 Post 1Q21 Earnings](https://www.forbes.com/sites/greatspeculations/2021/06/16/the-most-overstated-and-understated-fcf-in-the-sp-500-post-1q21-earnings/?sh=536bff042be2) by David Trainer (CEO of New Constructs) in the June 14th Forbes issue. For now, our app won't have a "red flag" pertaining to cash flow.
 
--   [Asset turnover]{.ul} was calibrated relative to other companies in the sector and considering the full 20+ year period when determining unfavorable ratios.
+-   [Asset turnover]{.ul} was calibrated relative to other companies in the same sector and considering the full 20+ year period when determining unfavorable ratios.
 
 -   Trend-related variables (ie: increasing days of inventory/receivables, declining margins and ROIC and declining reserves/sales ratios) were calculated by taking more than one year of change into account to give an added penalty when the negative trend was persistent. This had a cost of losing some periods at the very beginning of the series (ie: 1997-1998), because those were needed for the look-back.
 
--   The [High Valuation]{.ul} "red flag" was calculated using New Construct's 1-5 ratings, themselves derived variables, rather than raw valuation metrics. New Constructs does not use the traditional GAAP earnings and book value ratios to determine valuation, for reasons very well discussed in the [Basic Metrics](https://www.newconstructs.com/education/basic-metrics/) section on New Construct's website.
+-   The [High Valuation]{.ul} "red flag" was calculated using New Construct's 1-5 ratings, themselves derived variables, rather than raw valuation metrics. New Constructs does not use the traditional GAAP earnings and book value ratios pointed to in *Revelations* to determine valuation, for reasons very well discussed in the [Basic Metrics](https://www.newconstructs.com/education/basic-metrics/) section on New Construct's website.
 
--   We don't know what Mr. Gulliver would have used, but the cutoff for "high" [Earnings Distortion]{.ul} was set for cases simultaneously with greater than 1% of assets [and]{.ul} 10% of earnings, which varied over the time period, but yielded "red flags" in 12% of filings.
+-   We don't know what Mr. Gulliver would have used, but the cutoff for "high" [Earnings Distortion]{.ul} was set for cases where New Constructs' calculated "divergence" of core from reported earnings simultaneously greater than 1% of assets [and]{.ul} 10% of earnings, which varied over the time period, but yielded "red flags" in 12% of filings.
 
 -   For [liquidity]{.ul}, we first screened that a company did not have "excess cash", a New Constructs derived variable measuring the amount of cash over and above what was needed to conduct operations. If the company did not have "excess cash", we then used several credit metrics similar to those discussed in *Revelations*, but using the comparative New Construct's derived financial statement items.
 
 -   We also added two additional "red flags" of our own, for companies having amended filings (by far the least common "red flag") and with more than two flags previously still showing filing-on-filing increases in total flags.
 
-We don't know what thresholds Mr. Gulliver would have used in his analysis, but where we had discretion, our "red flags" were calibrated to occur in about 15-20% of filings over the "whole period" (as shown in Figure \@ref(fig:red-flag-summary-chart) below). When we say "over the whole period", this is significant because it means that the cut-offs for a "red flag" is the same regardless of the reporting period. Another option would have been to calculate by period (ie: attributing a similar number of each red flag in each period), but that would have taken away the ability to compare relative behavior over time. There was no special knowledge consideration given to an "informed" threshold level where evidence supported likely problems, just that the selected metric was deviating negatively relative to the large majority of filings during the 20-year period. Further work in this regard might even improve the quality of the signalling.
+We don't know what thresholds Mr. Gulliver would have used in his analysis, but where we had discretion, our "red flags" were calibrated to occur in about 15-20% of filings over the "whole period" (as shown in Figure \@ref(fig:red-flag-summary-chart) below). When we say "over the whole period", this is significant because it means that the cut-offs for a "red flag" is the same regardless of the reporting period. Another option would have been to calculate by period (ie: attributing a similar number of each red flag in each period), but that would have taken away the ability to compare behavior over time. There was no special knowledge consideration given to an "informed" threshold level where evidence supported likely problems, just that the selected metric was deviating negatively relative to the large majority of filings during the 20-year period. Further work in this regard might even improve the quality of the signalling.
 
 <details>
 
@@ -204,11 +204,11 @@ p
 
 # Ex-Post Return Data {#ex-post-return-data}
 
-In order to calculate *ex post* quarterly returns, we tried to find matching weekly prices for every company in the New Constructs database using the R `{BatchGetSymbols}` package, a wrapper for `{quantmod}` when more than a few hundred tickers are needed. Both packages source prices from Yahoo Finance by default, and provided price histories for almost 4,000 requested companies. About 2,200 companies, generally defunct since the earlier periods, were not available in Yahoo Finance, but we were able to recover an additional \~800 of the missing price histories using [Alpha Vantage](https://www.alphavantage.co) (the main pricing alternative to Yahoo Finance offered by `{quantmod}`).
+In order to calculate *ex post* quarterly returns, we tried to find matching weekly prices for every company in the New Constructs database using the R `{BatchGetSymbols}` package, a wrapper for `{quantmod}`, when more than a few hundred tickers are needed. Both packages source prices from Yahoo Finance by default, and provided price histories for almost 4,000 requested companies. About 2,200 tickers, generally defunct since the earlier periods of the series, were not available in Yahoo Finance, but we were able to recover an additional \~800 of the missing price histories using [Alpha Vantage](https://www.alphavantage.co) (the main pricing alternative to Yahoo Finance offered by `{quantmod}`).
 
-While Yahoo maintains, and we used the "adjusted prices" (ie: for splits, dividends and corporate actions) for our analysis, Alpha Vantage only offered closing prices (un-adjusted). Although we assume that many of the companies not available from either source must have gotten into difficulty and otherwise been de-listed, others might have been subsumed into other companies possibly at a premium. If the stock price went to zero or was otherwise de-listed from trading, we think the fact that the price data was not adjusted might be less relevant, because it probably wasn't paying dividends or spinning off subsidiaries.
+While Yahoo maintains, and we used the "adjusted prices" (ie: for splits, dividends and other corporate actions) when available, Alpha Vantage only offered closing prices (un-adjusted), so this may somewhat reduce the accuracy of our grouped return estimates. Although we assume that many of the companies only available with Alpha Vantage must have gotten into difficulty and otherwise been de-listed, some might have been subsumed into other companies, possibly at a premium. If the stock price went to zero or was otherwise de-listed from trading, we think the fact that the price data was not adjusted might be less relevant, because it probably wasn't paying dividends or spinning off subsidiaries. Still, the 800 companies currently using closing prices from Alpha Vantage may cause some inaccuracy in our return estimates.
 
-When we matched companies with returns, we used a "rolling join" on ticker and date, which took the last weekly price prior to the filing date. For this reason, the return calculated might start on the same day as the report, or 1-4 days prior to the filing date, so will be an approximation on an individual company and filing date level. For example, if the stock had a big rise in anticipation of good earnings, but we assume the many small inaccuracies should still be representative on average, especially in cases where the *ex post* return period is more than a few quarters.
+When we matched companies with returns, we used a "rolling join" on ticker and date, which took the last weekly price prior to the filing date. For this reason, the return calculated might start on the same day as the report, or 1-4 days prior to the filing date, so will be an approximation on an individual company and filing date level. For example, if the stock had a big rise in anticipation of good earnings or had a pop on the same day as the filing report, but we assume the many small inaccuracies should still be representative on average, especially in cases where the *ex post* return period is more than a few quarters.
 
 <details>
 
@@ -369,45 +369,48 @@ p <-
 p
 ```
 
-Figure \@ref(fig:summary-return-chart) above shows the median returns for all companies over the 6 quarters after reporting their 10-K filing. Using the tooltip, it is possible to see the number of companies, reports and flags during the selected period on the line chart. This graphic is static and only shows only annual reports, but we will discuss how to change the parameters of the inputs using our interactive Shiny app further down to search though both annual and quarterly reports or other subsets of the data by time, company, sector, etc. In the next section, we will also discuss some of the ways that this picture probably understates the true difference in the relative performance of the "red flag" group shown in the chart.
+Figure \@ref(fig:summary-return-chart) above shows the median returns for all companies over the 6 quarters after reporting their 10-K filing. Using the tooltip, it is possible to see the number of companies, reports and flags during the selected period on the line chart. The graphic shown here is static and only shows annual reports, but we will discuss how to change the parameters of the inputs using our interactive [Red Flag Explorer](https://luceyda.shinyapps.io/redflagapp/) Shiny app further down. In the next section, we will also discuss some of the ways that this picture probably understates the true differences in the relative performance of the "red flag" groups shown in the chart.
 
 # Bias From Missing Return Data {#bias-from-missing-return-data}
 
-All in all, we collected almost 4 million weekly prices for 5,000 unique companies, and calculated the comparative log returns relative to the Vanguard Total Market Index fund ("TMI") over the subsequent 1 through 13 quarters after every filing date. As shown in Figure \@ref(fig:return-coverage-table) above, we were able to match several thousand stocks covered by New Constructs in most years. We expect that across all the periods and companies, the aggregated relative returns by "red flag" group (as shown in the "Summary Returns" table and "Returns over Time" chart on our Shiny app), should be representative, though not precise, of the true returns for companies with those attributes. The returns for higher "red flag" groups will always have wider confidence bands, because there are so many fewer companies as the number of flags increase.
+All in all, we collected almost 4 million weekly prices for 5,000 unique companies, and calculated the comparative log returns relative to the Vanguard Total Market Index fund ("TMI") over the subsequent 1 through 13 quarters after every filing date. As shown in Figure \@ref(fig:return-coverage-table) above, we were able to match several thousand stocks covered by New Constructs in most years. We expect that across all the periods and companies, the aggregated relative returns by "red flag" group (as shown in the "Summary Returns" table and "Returns over Time" chart on [Red Flag Explorer](https://luceyda.shinyapps.io/redflagapp/)), should be representative, though not precise, picture of the true returns for companies with those attributes. The bands for higher "red flag" groups will always have greater uncertainty, because there are so many fewer companies as the number of flags increase.
 
-The group of companies unmatched to returns is especially unfortunate, because, as shown in Figure \@ref(fig:red-flag-summary-chart), aggressive accounting and other risky behaviors appear to have been most common between 2000-2005. During that period, many of our "red flags" occurred in 20-30% of filings, and a much larger number of reports had to be amended. It is likely that companies which went out of business (ceasing to generate pricing data), also had more warning signs, and thus, would be most relevant to our analysis. In fact, in a list of 38 the most notorious companies we could think of (ie: Enron, Worldcom, etc.), our pricing sources were missing for about 10, a much higher rate missing than the overall average. To further confirm this expectation, the average number of "red flags" in unmatched companies in the annual data and quarterly data was 1.7 and 1.5, respectively, compared to 1.4 and 1.2 in the matched group. As a result, we expect "survivor bias" to make our estimated returns for higher "red flag" groups somewhat less bad than they otherwise would have been.
+The group of companies unmatched to returns is especially unfortunate, because, as shown in Figure \@ref(fig:red-flag-summary-chart), aggressive accounting and other risky behaviors appear to have been most common between 2000-2005. During that period, many of our "red flags" occurred in 20-30% of filings, and a much larger number of reports had to be amended. It is likely that companies which went out of business (ceasing to generate pricing data), also would have had more warning signs, and thus, have been most relevant to our analysis. In fact, in a list of 38 the most notorious companies we could think of (ie: Enron, Worldcom, etc.), our pricing sources were missing for 10, a much higher rate missing than the overall average. To further confirm this expectation, the average number of "red flags" in unmatched companies in the annual data and quarterly data was 1.7 and 1.5, respectively, compared to 1.4 and 1.2 in the matched group. As a result, we expect "survivor bias" to make our estimated returns for higher "red flag" groups somewhat less bad than they otherwise would have been.
+
 
 # Using the Shiny App {#using-the-shiny-app}
 
-The triple horizontal line icon at the top left allows the user to change any of the inputs to the [Red Flag Explorer](https://luceyda.shinyapps.io/redflagapp/). The "View" switch allows to toggle between 67,000 annual and 78,500 quarterly filings. Annual filings are included as the fourth quarter in the quarterly data set. It should be noted that the same flag on the same filing, for a company and period, might differ between our annual and quarterly calculations. This is because flags are calculated with reference only to the other filings of the same group (ie: annual or quarterly). It is possible to filter by sector or by selecting a customized group of companies. In the next post, we will set up a filter on the app to allow users to see groups of interesting companies (ie: past accounting scandals, meme stocks, companies included for all periods). Changing any of the inputs alters the data viewed for all of the tables and charts displayed when the app loads and on the tabs.
+The triple horizontal line icon at the top left of [Red Flag Explorer](https://luceyda.shinyapps.io/redflagapp/), opens a menu which allows the user to change any of the input fields. Changing any of the inputs alters the data viewed for all of the tables and charts displayed when the app loads and on the tabs. The "View" switch allows to toggle between 67,000 annual and 78,500 quarterly filings. All annual filings are included as the fourth quarter in the quarterly data set. It should be noted that the same flag on the same filing, for a company and period, might differ between our annual and quarterly calculations. This is because flags are calculated with reference only to the other filings of the same group (ie: annual or quarterly). It is possible to filter by sector or by selecting a customized group of companies. In a future post, we plan to set up a filter on the app to allow users to see groups of interesting companies (ie: past accounting scandals, meme stocks, companies included for all periods). 
 
-The "Returns over Time" chart shows the evolution of returns by number of red flags over time. It should be noted that when a flag group had a median decline greater than 50%, we truncated it to 50% in order to maintain the chart scaling among the other groups. There are generally only a handful of companies in the groups with such large declines. It is also possible to choose a selection of companies, but "Returns over Time" for a group loses its meaning if there are only a few items, because the same company will most likely fall into multiple "red flag" groups over time. If the selection is small enough, there might not even be a data point for a higher number of flags in a given year, and as a result, there may be an extended time difference between two points when there were no members of that group between those periods (usually 5+ flags in a period).
+The "Returns over Time" tab shows the evolution of returns by number of red flags over time. It should be noted that when a flag group had a median decline greater than 50%, we truncated it to 50% in order to maintain the chart scaling among the other groups. There are generally only a small number of companies in the groups with such large declines. It is also possible to choose a selection of companies, but "Returns over Time" for a group loses its meaning if there are too few items, because the same company will most likely fall into multiple "red flag" groups over time. If the selection is small enough, there might not even be a single data point for a higher number of flags in a given year, and as a result, there may be an extended time difference between two points when there were no members of that group between those periods (usually 5+ flags in a period).
 
-When the app loads, it includes the aggregate for all 13 quarterly return periods, but we would not advise to look at it in this way, because most of these periods encompass each other (ie: the one quarter return is part of the two quarter return). The quarterly data set does not show returns beyond eight quarters, and though the annual data set shows up to 13 quarters, using this many will result in the loss of data in 2020 and 2021, because we have to leave that much lead time. We observe that there is not much differentiation among flag groups when the quarterly returns are only a quarter or two, so we recommend a default of six quarters, but were unable to hard code this into the app menu.
+When the app loads, it shows the aggregate of all 13 quarterly return periods, but most of these periods encompass each other (ie: the one quarter return is part of the two quarter return, etc.). We have observed that it isn't easy to see the contrast of flag groups when the quarterly returns are only a quarter or two, so we recommend 4- or 6-quarters, but were unable to hard code this as a starting point into the app menu. The quarterly data set does not show returns beyond eight quarters, and though the annual data set shows up to 13 quarters, using this many will result in the loss of data in 2020 and 2021 (because we have to leave that much lead time). 
 
-The "Flags" tab shows the descriptions and counts of all "red flags" in the filtered selection. As mentioned earlier, most flags occur in approximately 15-20% of the cases, so seeing more than a few tends to be the exception. The number of unique companies included in the "red flag" group is a more important indicator than the number of reports, and when looking at just one return period, this number should be pretty close to the number of reports unless an unusually long quarterly return period is selected.
-
-Lastly, the "Counts over Time" tab shows the percentage of filings with that "red flag" during that period. Because "red flags" are calculated relative to the whole 20 year period, they are not evenly distributed by year. This offers an objective perspective on effectively how risky a given period is, and as mentioned earlier, the clear winner was the early period in the chart with by far the highest percentages of red flags in most cases. There were also spikes in several of the more cyclical indicators (ie: margins and ROIC declining and rising inventory/receivable days) in 2009-10 and last year. Interestingly, the percentage Asset Turn flags seem to be rising steadily over much of the period.
+The "Flags Counts" tab shows the descriptions and counts of all "red flags" in the filtered selection. As mentioned earlier, most flags occur in approximately 15-20% of the cases, so seeing more than a few tends to be the exception. The number of unique companies included in the "red flag" group is a more important indicator than the number of reports, and when looking at just one return period, this number should be pretty close to the number of reports unless an unusually long quarterly return period is selected. Lastly, the "Counts over Time" tab shows the percentage of filings with that "red flag" during that period. Because "red flags" are calculated relative to the whole 20-year period, they are not evenly distributed by year. This offers an objective perspective on how behavior in a given period is, and as mentioned earlier, the early period in the chart has by far the most red flags.
 
 # Cursory Analysis {#cursory-analysis}
 
-The beauty of our Shiny app is that we are able leave it for the user to explore the inputs to test sensitivity of "red flags" to performance for themselves. No locked analysis with p-values here, and the "red flags" (not New Construct's raw data) will be available for others to test. In aggregate considering all periods, we observe that median group returns tend to be more stable and higher when the number of "red flags" is below 2-3. There are naturally a lot fewer filings in higher flag groups, and so as mentioned earlier, aggregate returns become considerably more volatile with a higher number of flags and lower confidence can be attributed to those estimates. The separation among groups by number of flags tends to be persistent for most sectors, though seems a little more visible in cyclical sectors. This may be because the several of the more cyclical "red flags" (such as Margins & ROIC and Days of Inventory & Receivables) affect those sectors more and may allow for greater contrast. Some "red flag" groups which were prominent early on, such as "Earnings Distortion" and "Amendments", mostly trended lower, while the prevalence of "Asset Turnover" warnings increased steadily over the period.
+The beauty of our Shiny app is that we are able leave it for the user to explore the inputs and to test sensitivity of "red flags" to performance for themselves. No locked data with p-values here, and the derived "red flags" (not New Construct's raw data) will be available for others to test. In aggregate, considering all periods, we observe that median group relative returns appear to be more stable and higher when the number of "red flags" is below 2-3, but generally seem to fall off proportionally as flags rise. There are naturally a lot fewer filings in higher flag groups, and as mentioned earlier, aggregate relative returns are much more uncertain and become considerably more volatile with a higher number of flags. 
 
-Returns broadly become more negative relative to the index over the period measured, which is surprising. We would expect the stocks doing better and worse than the Vanguard TMI to cancel each other out, not doing particularly better or worse in aggregate during any period. If later years are selected with the app filters, the difference in median and mean returns between higher and lower flag groups seems to be smaller. In the year 2000 (the beginning of our data), there was a more significant number of companies with 5-7 "red flags", and their under-performance was startling relative to the lower flag groups. We recall the post technology bubble period as being a golden age of stock picking. After 2004 or 2005, almost all red flag groups under-performed the TMI, which we struggle to explain. Interestingly, 2020 seems to be the only year when everything reversed, and high flag actually outperformed the TMI and lower flag groups, in proportion to the number of "red flags". Certainly, when Mr. Gulliver wrote his piece, the difference was more striking, so maybe more market observers took note than we might have thought and arbitraged the effect away.
+In the first few periods, most red flag groups outperform the TMI, but after 2003-04, almost all seem to under-perform, which we struggle to explain. The TMI has a lot of stocks in it and should be less dominated by high market capitalization companies. We would expect the stocks doing better and worse than the index in any period, to cancel each other out in aggregate. If anything, it seems like our process for collecting returns would be biased towards companies which did well, so we might expect our average returns to do better than the TMI if anything.
+
+In the year 1999 (the beginning of our data) and for a few years after, there was a much more significant number of companies with 5-7 "red flags", and their under-performance was striking relative to the lower flag groups. Also after 2005, the difference in median and mean relative returns between higher and lower flag groups seems to become smaller. We recall the post technology bubble period as being a golden age of stock picking. Certainly, when Mr. Gulliver wrote his piece in 2003, the case for indexing wasn't as strong as it has become today. Maybe more market observers took note than we might have thought and arbitraged some of these effects away. Interestingly, 2020 seems to be the only year when everything actually reversed, and high flag actually outperformed both the TMI and lower flag groups.
+
+The separation among groups by number of flags tends to be persistent for most sectors, though seems a little more visible in cyclical sectors. This may be because the several of the more cyclical "red flags" (such as Margins & ROIC and Days of Inventory & Receivables) affect those sectors more and may allow for greater contrast. Some "red flag" groups which were prominent early on, such as "Earnings Distortion" and "Amendments", mostly trended lower, while the prevalence of "Asset Turnover" warnings increased steadily over the period.
 
 # Thoughts about Data and Modeling {#modeling-and-data-thoughts}
 
-By collapsing the ratios down into boolean "red flags" using arbitrarily thresholds, we lost a lot of data and are not able to allow variables to interact. We are also treating all of the variables equally, when some may be more important or may have more importance in combination with others. New Constructs was kind enough to share their data, but that was on a temporary basis, so this is beyond what we can achieve in this project, but taking these into account might give a better signal of future performance.
+The model proposed by *Revelations* was rules-based, aggregating a large number of weak boolean signals. It's power comes from simplifying and systematically taking more elements over a larger number of companies than most single analysts might consider at the same time. By collapsing the financial ratios down into boolean indicators using somewhat arbitrarily thresholds, we lose a lot of data and are less able to allow variables to interact. We are also treating all of variables equally, when some may be more important, or may have greater importance in combination with others. New Constructs was kind enough to share their data, but that was on a temporary basis, so this is beyond what we can achieve in this project, but taking these into account might give a even better signal of future performance.
 
-The model proposed by *Revelations* was rules-based, aggregating a large number of weak boolean signals. It's power comes from simplifying and systematically taking more elements over a larger number of companies than most single analysts might consider at the same time. In addition to the problem with sparsity among the higher flag groups, it isn't clear if the relationship between the number of flags and returns should be linear, and the few very filings with a high number of flags seemed to have more than a linear impact on returns. The statistical modeling tools we have learned so far rely on finding a few highly significant numeric variables, so we are not sure how to model when the signal derives from the sum of many weak variables.
+In addition to the problem with sparsity among the higher flag groups, it isn't clear if the relationship between the number of flags and relative returns should be linear, and the few very filings with a high number of flags seemed to have more than a linear impact. The statistical modeling tools we have learned so far rely on finding a few highly significant numeric variables, so we are not sure how to model when the signal derives from the sum of many weak variables.
 
-The nature of the data is also a consideration. We would like to measure the true impact of individual or collection of flags. The challenge is the longitudinal nature of the data, and the related sparsity of high flag data by period. This is a situation best addressed with a Bayesian mixture model, which might allow us to get a more confident posterior for the sparse flag groups by taking into account measurements from other periods and helping to gauge our confidence in the differences of means of the "red flag" groups. This is likely something we will attempt in the future.
+The nature of the data is also a consideration. We would like to measure the true impact of individual or collection of flags. The challenge is the longitudinal nature of the data, and the related sparsity of high flag data by period. This is a situation may be best addressed with a Bayesian mixed-effects model, which might allow us to get a more confident posterior estimate for the sparse flag groups by taking into account measurements from other periods and helping to gauge our confidence in the differences of means of the "red flag" groups. This is something we may attempt in the future.
 
 # Next Steps {#next-steps}
 
-There are so many possible next steps it is difficult to know where to start. The first place would be to find the price histories for the missing 1,600 companies. We have included mainly accounting ratios in our analysis so far, but we could also easily add variables from other data sources, such as NLP signals such as sentiment of the MD&A, management incentive alignment measures, short interest ratios or insider selling. At the moment out of almost 145,000 filings, we found only about 1% with five or more "red flags" among the annual and quarterly data, so it might be beneficial to take into consideration more risk factors. With our code in an R `{targets}` project, any of these additions would only take minutes to add to the app, so it becomes a living document.
+There are so many possible next steps it is difficult to know where to start. The first place would be to find the price histories for the missing 1,600 companies, preferably adjusted closing prices. We have included mainly accounting ratios in our analysis so far, but we could also easily add variables from other data sources, such as NLP signals such as sentiment of the MD&A, management incentive alignment measures, short interest ratios or insider selling. At the moment out of almost 145,000 filings, we found only about 1% with five or more "red flags" among the annual and quarterly data, so the contrast among groups might increase further if we to took into consideration more risk factors. With our code in an R `{targets}` project, any of these additions would only a short time to add to the app, so the whole project becomes a living document.
 
-In our next blog post in this series, we will add a series of filters of several themes including: notorious accounting collapses, meme stocks, high internally-generated intangible and companies which were present over the whole period. We might add some more visualizations to the app to enable users to explore these filters. Finally, we will attempt to build the hierarchical, longitudinal mixture model as described above in order to better estimate the true means of the returns of the "red flag" groups.
+In our next blog post in this series, we plan to add a series of filters of several themes including: notorious accounting collapses, meme stocks, high internally-generated intangible and companies which were present over the whole period. We might add some more visualizations to the app to enable users to explore these filters. Finally, we may attempt to build the hierarchical, longitudinal mixture model as described above in order to better estimate the true means of the returns of the "red flag" groups.
 
 # Conclusion {#conclusion}
 
